# prom-rs

./: Cargo.toml  README.md
example/: prometheus.yml
src/: cli.rs  config.rs  discover.rs  main.rs  result.rs
src/scrape/: job.rs  mod.rs  scraper.rs
