[package]
edition = "2021"
name = "prom-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
duration-str = "0.5.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = {version = "0.11.14", features = ["blocking"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.16"
signal-hook = {version = "0.3.14", features = ["extended-siginfo"]}
thiserror = "1.0.38"
